# gitlance

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  action.yml  gitlance.toml  renovate.json
.github/workflows/: commit-checks.yml  release.yml  renovate-config-validation.yml  validate.yml
.reuse/: dep5
githooks/: commit-msg  pre-push
snap/: snapcraft.yaml
src/: config.rs  error.rs  generate.rs  git.rs  lib.rs  main.rs  output.rs  test_utils.rs
src/checks/: conventional.rs  mod.rs  signed_off_by.rs  wip_fixup.rs
src/credential_store/: error.rs  factory.rs  file_store.rs  keyring_store.rs  mod.rs
tests/: integration_tests.rs
